Fixed floating button on mobile and edited breakpoints to work with taller mobile viewports

--- a/src/components/Loading/styles.module.css
+++ b/src/components/Loading/styles.module.css
@@ -118,7 +118,7 @@
   }
   
 
-  @media(max-width: 800px) and (max-height: 800px) {
+  @media(max-width: 800px) and (max-height: 896px) {
     .container {
       padding: 0;
     }
