--- a/src/components/TipMerchant/styles.module.css
+++ b/src/components/TipMerchant/styles.module.css
@@ -25,7 +25,7 @@
     background-image: linear-gradient( 135deg, #F6D242 10%, #FF52E5 100%);
   }
 
-  @media(max-width: 800px) and (max-height: 800px) {
+  @media(max-width: 800px) and (max-height: 896px) {
     .container {
       padding: 0;
     }
